    been closed.
  - This requires a change in the protocol spoken between server and
    client. "H" now needs a NUL byte following it and the entire
    sequence must be enclosed in "S\000 .. F\000".
  - Also, the client has been reimplemented in C, so the dependency on
    Bash and socat is gone.
  - Sockets now live in /tmp/xiate-$uid.

v17.10  2017-10-18
  [Changed]
  - We use vte_terminal_spawn_async() now, because the _sync() function
    has been deprecated. This means that you now get a proper error
    message on STDERR if spawning the main child process failed.

  [Added]
  - Support explicit hyperlinks. This adds the new variable
    "hyperlink_handler" to config.h and REQUIRES you to use VTE 0.50 or
    newer. See config.def.h for more info on that feature.

v17.09  2017-09-16
  [LICENSING]
  - The project has been relicensed under the MIT license (more
    precisely called "Expat License", but everyone calls it "MIT
    license" these days).

v17.02  2017-02-12
  [Fixed]
  - xiatec no longer fails if user parameters contain printf format
    strings (ouch).

  [Added]
  - xiate now hides the cursor and changes the window title when the
    child process exits and "-hold" is used.
  - xiate should cope better with OOM situations. We always try to keep
    the process running in order to *not* kill all your open terminal
    windows.

v16.12  2016-12-24
  [Changed]
  - The deprecated GRegex API is no longer being used by xiate.
  - xiate now expects at least VTE version 0.46.

  [Added]
  - Update geometry hints when changing font or font size.
  - xiate now responds to resize requests of terminal applications.
  - Terminal size (in terms of rows and columns) is being retained on
    changes to fonts or font size.

v16.10  2016-10-29
  [Added]
  - Multiple fonts can be specified and you can switch during runtime.

v16.08  2016-08-20
  [Added]
  - Foreground color of text under the cursor can be customized.

v16.06  2016-06-26
  [Changed]